--- a/oa-core/pom.xml
+++ b/oa-core/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>oa-core</artifactId>
+    <packaging>war</packaging>
 
     <dependencies>
         <dependency>
@@ -33,6 +34,18 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <!--  移除嵌入式tomcat插件-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -79,5 +92,7 @@
             <version>1.2.36</version>
         </dependency>
     </dependencies>
-
+    <build>
+        <finalName>oa</finalName>
+    </build>
 </project>
