--- a/oa-core/src/main/resources/application-dev.yml
+++ b/oa-core/src/main/resources/application-dev.yml
@@ -9,9 +9,9 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource # 当前数据源操作类型
     driver-class-name: com.mysql.cj.jdbc.Driver # mysql驱动包
-    url: jdbc:mysql://localhost:3306/htwy_oa?useUnicode=true&characterEncoding=utf8 # 数据库名称
+    url: jdbc:mysql://106.14.176.167:3306/htwy_oa?useUnicode=true&characterEncoding=utf8 # 数据库名称
     username: root
-    password: vv123456
+    password: 123456
 
   freemarker:
     template-loader-path: classpath:/templates
@@ -21,10 +21,17 @@ spring:
 
 mybatis:
   mapper-locations: classpath*:/mappers/**/*.xml
+#file:
+#  root:
+#    path: /Users/xuweiwei/code/gitcode/oa_core/oa-core/src/main/resources/static/file
+#img:
+#  rootpath: /Users/xuweiwei/code/gitcode/oa_core/oa-core/src/main/resources/static/images
+#attachment:
+#  roopath: /Users/xuweiwei/code/gitcode/oa_core/oa-core/src/main/resources/static/attachment
 file:
   root:
-    path: /Users/xuweiwei/code/gitcode/oa_core/oa-core/src/main/resources/static/file
+    path: F:\code\oa\oa-core\src\main\resources\static\file
 img:
-  rootpath: /Users/xuweiwei/code/gitcode/oa_core/oa-core/src/main/resources/static/images
+  rootpath: F:\code\oa\oa-core\src\main\resources\static\images
 attachment:
-  roopath: /Users/xuweiwei/code/gitcode/oa_core/oa-core/src/main/resources/static/attachment
+  roopath: F:\code\oa\oa-core\src\main\resources\static\attachment
