--- a/oa-common/pom.xml
+++ b/oa-common/pom.xml
@@ -65,5 +65,11 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <!--监控sql日志-->
+        <!--<dependency>
+            <groupId>org.bgee.log4jdbc-log4j2</groupId>
+            <artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
+            <version>1.16</version>
+        </dependency>-->
     </dependencies>
 </project>
