--- a/oa-core/src/main/resources/application-prod.yml
+++ b/oa-core/src/main/resources/application-prod.yml
@@ -12,13 +12,21 @@ spring:
     url: jdbc:mysql://106.14.176.167:3306/htwy_oa?useUnicode=true&characterEncoding=utf8 # 数据库名称
     username: root
     password: 123456
+  jpa:
+    show_sql: true
 
   freemarker:
     template-loader-path: classpath:/templates
     suffix: .ftl
+    settings:
+      number_format: 0.##
+
+logging:
+  level:
+    org.hibernate.type.descriptor.sql.BasicBinder: trace
 
 mybatis:
-  mapper-locations: classpath*:/mappers/*.xml
+  mapper-locations: classpath*:/mappers/**/*.xml
 file:
   root:
     path: /u01/apache-tomcat-9.0.58/webapps/oa/WEB-INF/classes/static/file
