--- a/oa-core/src/main/resources/application-dev.yml
+++ b/oa-core/src/main/resources/application-dev.yml
@@ -11,7 +11,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver # mysql驱动包
     url: jdbc:mysql://106.14.176.167:3306/htwy_oa?useUnicode=true&characterEncoding=utf8 # 数据库名称
     username: root
-    password: 123456
+    password: vv@qwe321
   jpa:
     show_sql: true
 
